@@ -39,3 +39,7 @@ smtp_port = 25
 # smtp_tls = False
 # smtp_keyfile = '/etc/pki/tls/private/localhost.key
 # smtp_certfile = '/etc/pki/tls/certs/localhost.crt
+
+### MISC
+gpg_key_file_path = /usr/share/ius-tools/IUS-COMMUNITY-GPG-KEY
+eua_file_path = /usr/share/ius-tools/IUS-COMMUNITY-EUA
