@@ -1,11 +1,12 @@
 
-
 0.1.7 - not released (will be released as 0.1.8)
 ------------------------------------------------------------------------------
 
 Bug Fixes
 
- - Issue #18 - --passphrase on admin plugin broken
+ - Issue #18 - Option --passphrase on admin plugin broken
+ - Issue #19 - Include IUS End User Agreement and GPG Key in repo
+ 
 
 0.1.6 - Jun 20, 2011 
 ------------------------------------------------------------------------------
